# time-tracker

./: CMakeLists.txt  GoogleTimeTracker.pro  README  calendarclient.cpp  calendarclient.h  calendarevent.cpp  calendarevent.h  eventlistmodel.cpp  eventlistmodel.h  index.html  mainwindow.cpp  mainwindow.h  mainwindow.ui  params.json
time-tracker/: CMakeLists.txt  calendar.cpp  calendar.h  calendar_data_manager.cpp  calendarclient.cpp  calendarclient.h  calendarevent.cpp  calendarevent.h  calendarlistmodel.cpp  calendarlistmodel.h  eventlistmodel.cpp  eventlistmodel.h  eventmatcher.cpp  eventmatcher.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oauth2.cpp  oauth2.h  qmlwindow.cpp  qmlwindow.h  qmlwindow.ui  settings.cpp  settings.h  timetracker.qrc
time-tracker/qml/: Calendar.qml  Event.qml
